samples/_failures_safe/1761487000_815fa6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47f3f8e8.c: In function ‘main’:
./samples/SAFE/__tmp_47f3f8e8.c:153:27: error: expected ‘)’ at end of input
  153 |                 if (status
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_47f3f8e8.c:153:17: error: expected declaration or statement at end of input
  153 |                 if (status
      |                 ^~
./samples/SAFE/__tmp_47f3f8e8.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47f3f8e8.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47f3f8e8.c:153:17: error: expected declaration or statement at end of input
